# deck-code-to-markdown

./: Cargo.toml  README.md
src/: api_card.rs  card_info_fetcher.rs  card_matcher.rs  deck_item.rs  detailed_deck.rs  error.rs  main.rs
