[package]
name = "deck-code-to-markdown"
version = "0.1.2"
authors = ["Arran France <arran@arranfrance.com>"]
edition = "2021"
keywords = ["Hearthstone", "Markdown"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/arranf/deck-code-to-markdown"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
env_logger = "0.11.5"
log = "0.4.22"
deck_codes = "0.3.0"
paw = "1.0.0"
percent-encoding = "2.3.1"
indicatif = "0.17.9"
directories = "5.0.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
anyhow = "1.0.93"
custom_error = "1.9.2"
